# plutonium_launcher

./: .gitignore  README.md  main.bat  main.pyw  pyproject.toml  requirements.txt  settings.json
assets/base/: project_updater.bat
assets/build_scripts/plutonium_launcher_developer_workspace/: MakeDevelopmentRelease.bat  RefreshRequirementsTextFile.bat  TestVirtualEnvironment.bat  UploadLatestToRepo.bat  VirtualEnvironmentSetup.bat
assets/dev_tools/: upload_latest_to_repo.bat
src/plutonium_launcher/: __main__.py  project.fbp
tools/build_scripts/: build_exe_release.py
